add configuring patterns with json file